Styling for the social icons in footer.

--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -3,16 +3,16 @@
 
             <div class="footer-pre">
 
-                <ul class="list list__horizontal footer_icon-list">
+                <ul class="list list__horizontal footer_share-icon-list">
                     <li class="list_item">
-                        <a class="share-icon"
+                        <a class="share-icon share-icon__large"
                            href="https://facebook.com/cfpb">
                             <span class="cf-icon cf-icon-facebook-square"></span>
                             <span class="u-visually-hidden">Visit us on Facebook</span>
                         </a>
                     </li>
                     <li class="list_item">
-                        <a class="share-icon"
+                        <a class="share-icon share-icon__large"
                            href="https://twitter.com/cfpb">
                             <span class="cf-icon cf-icon-twitter-square"></span>
                             <span class="u-visually-hidden">Visit us on Twitter</span>
