--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -3207,10 +3207,18 @@ Main content...
       <div class="docs-css">
         <pre class="docs-code"><code data-language="css">
 .footer {
-  padding-top: 1.5em;
-  padding-bottom: 1.5em;
+  padding-top: 2.8125em;
+  padding-bottom: 2.8125em;
   border-top: 3px solid #2cb34a;
   background: #f1f2f2;
+}
+
+.footer_share-icon-list {
+  margin-bottom: 1.875em;
+}
+
+.footer_share-icon-list {
+  margin-bottom: 0;
 }
 
 .footer-l {
@@ -3224,11 +3232,7 @@ Main content...
   position: relative;
 }
 
-.footer-pre .footer_icon-list {
-  margin-bottom: 0;
-}
-
-.footer-pre .footer_icon-list {
+.footer-pre .footer_share-icon-list {
   position: absolute;
   right: 0;
 }
