--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8902,10 +8902,18 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     - cfgov-layout
 */
 .footer {
-  padding-top: 1.5em;
-  padding-bottom: 1.5em;
+  padding-top: 2.8125em;
+  padding-bottom: 2.8125em;
   border-top: 3px solid #2cb34a;
   background: #f1f2f2;
+}
+.footer_share-icon-list {
+  margin-bottom: 1.875em;
+}
+@media only all and (min-width: 48em) {
+  .footer_share-icon-list {
+    margin-bottom: 0;
+  }
 }
 .footer-l {
   display: block;
@@ -8916,11 +8924,8 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 .footer-pre {
   position: relative;
 }
-.footer-pre .footer_icon-list {
-  margin-bottom: 0;
-}
 @media only all and (min-width: 48em) {
-  .footer-pre .footer_icon-list {
+  .footer-pre .footer_share-icon-list {
     position: absolute;
     right: 0;
   }
@@ -11664,7 +11669,7 @@ a.category-slug.active {
   name: Share icon
   family: cfgov-misc
   patterns:
-    - name: Default example
+    - name: .share-icon (base)
       markup: |
         <a class="share-icon" href="#">
             <span class="cf-icon cf-icon-email-social-square"></span>
@@ -11681,6 +11686,16 @@ a.category-slug.active {
           .share-icon
             .cf-icon.cf-icon-name
             .u-visually-hidden
+    - name: .share-icon__large (modifier)
+      markup: |
+        <a class="share-icon share-icon__large" href="#">
+            <span class="cf-icon cf-icon-email-social-square"></span>
+            <span class="u-visually-hidden">
+                Share by email
+            </span>
+        </a>
+      codenotes:
+        - .share-icon__large
   tags:
     - cfgov-misc
 */
@@ -11711,8 +11726,8 @@ a.category-slug.active {
   border-color: #43484e;
   color: #43484e;
 }
-.share-icon + .share-icon {
-  margin-left: 0.07692308em;
+.share-icon__large {
+  font-size: 2.1875em;
 }
 /* topdoc
   name: Line container
