Adds disabled links to footer.

--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -31,14 +31,14 @@
                         </a>
                     </li>
                     <li class="list_item">
-                        <a class="list_link" href="http://www.consumerfinance.gov/jobs/">
+                        <span class="list_link list_link__disabled">
                             Careers
-                        </a>
+                        </span>
                     </li>
                     <li class="list_item">
-                        <a class="list_link" href="http://www.consumerfinance.gov/es/">
+                        <span class="list_link list_link__disabled">
                             Español
-                        </a>
+                        </span>
                     </li>
                 </ul>
 
