--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -3221,6 +3221,42 @@ Main content...
   margin-bottom: 0;
 }
 
+.footer_nav-list .list_link__disabled {
+  color: #babbbd;
+  border-color: #babbbd;
+  border-bottom-width: 1px;
+  border-bottom-style: dotted;
+}
+
+.footer_nav-list .list_link__disabled:visited,
+.footer_nav-list .list_link__disabled.visited {
+  border-color: #babbbd;
+  color: #babbbd;
+}
+
+.footer_nav-list .list_link__disabled:hover,
+.footer_nav-list .list_link__disabled.hover {
+  border-color: #babbbd;
+  color: #babbbd;
+}
+
+.footer_nav-list .list_link__disabled:focus,
+.footer_nav-list .list_link__disabled.focus {
+  border-color: #babbbd;
+  color: #babbbd;
+}
+
+.footer_nav-list .list_link__disabled:active,
+.footer_nav-list .list_link__disabled.active {
+  border-color: #babbbd;
+  color: #babbbd;
+}
+
+.footer_nav-list .list_link__disabled:hover,
+.footer_nav-list .list_link__disabled.hover {
+  border-bottom-width: 1px;
+}
+
 .footer-l {
   display: block;
   position: relative;
