--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -1772,6 +1772,14 @@
         });
     }
 
+    &_nav-list {
+        .list_link__disabled {
+            .u-link__colors(@gray-50);
+            .u-link__border();
+            border-bottom-style: dotted;
+        }
+    }
+
     &-l {
         .grid_nested-col-group();
     }
