Style tweaks for footer links.

--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -130,23 +130,20 @@
 
             <div class="footer-left">
 
-                <a href="/" class="footer_logo">
-                    <img class="header_logo u-js-only"
-                         src="/static/img/logo.svg"
-                         onerror="this.onerror=null;this.src='/static/img/logo.png';"
-                         alt="Consumer Financial Protection Bureau"
-                         width="262"
-                         height="66">
-                    <noscript>
-                        <img class="header_logo logo__no-js"
-                             src="/static/img/logo.png"
-                             alt="Consumer Financial Protection Bureau"
-                             width="262"
-                             height="66">
-                    </noscript>
-                </a>
-                <p class="short-desc footer_address">
-                    Consumer Financial Protection Bureau<br>
+                <img class="footer_logo u-js-only"
+                     src="/static/img/logo.svg"
+                     onerror="this.onerror=null;this.src='/static/img/logo.png';"
+                     alt="Consumer Financial Protection Bureau">
+                <noscript>
+                    <img class="footer_logo logo__no-js"
+                         src="/static/img/logo.png"
+                         alt="Consumer Financial Protection Bureau">
+                </noscript>
+                <p class="footer_address">
+                    <span class="footer_address-word-break">
+                        Consumer Financial
+                    </span>
+                    Protection Bureau<br>
                     1700 G Street, NW<br>
                     Washington, D.C. 20552
                 </p>
