--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -3221,6 +3221,49 @@ Main content...
   margin-bottom: 0;
 }
 
+.footer_nav-list {
+  font-size: 1.125em;
+}
+
+.footer_nav-list.list__links {
+  border-top-color: #101820;
+}
+
+.footer_nav-list .list_link {
+  color: #101820;
+  border-color: #101820;
+  border-bottom-width: 1px;
+}
+
+.footer_nav-list .list_link:visited,
+.footer_nav-list .list_link.visited {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_nav-list .list_link:hover,
+.footer_nav-list .list_link.hover {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_nav-list .list_link:focus,
+.footer_nav-list .list_link.focus {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_nav-list .list_link:active,
+.footer_nav-list .list_link.active {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_nav-list .list_link:hover,
+.footer_nav-list .list_link.hover {
+  border-bottom-width: 1px;
+}
+
 .footer_nav-list .list_link__disabled {
   color: #babbbd;
   border-color: #babbbd;
@@ -3255,6 +3298,161 @@ Main content...
 .footer_nav-list .list_link__disabled:hover,
 .footer_nav-list .list_link__disabled.hover {
   border-bottom-width: 1px;
+}
+
+.footer_logo {
+  width: 218px;
+  height: 46px;
+  margin-bottom: 1em;
+}
+
+.footer_address {
+  font-family: &quot;AvenirNextLTW01-Regular&quot;, Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+}
+
+.footer_address em,
+.footer_address i {
+  font-family: &quot;AvenirNextLTW01-Italic&quot;, Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+
+.lt-ie9 .footer_address em,
+.lt-ie9 .footer_address i {
+  font-style: normal !important;
+}
+
+.footer_address strong,
+.footer_address b {
+  font-family: &quot;AvenirNextLTW01-Demi&quot;, Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.lt-ie9 .footer_address strong,
+.lt-ie9 .footer_address b {
+  font-weight: normal !important;
+}
+
+.footer_address {
+  font-size: 0.75em;
+}
+
+.footer_address-word-break {
+  display: block;
+}
+
+.footer_general-inqueries b {
+  display: block;
+  margin-bottom: 0.5em;
+  font-family: &quot;AvenirNextLTW01-Demi&quot;, Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.lt-ie9 .footer_general-inqueries b {
+  font-weight: normal !important;
+}
+
+.footer_general-inqueries .list__links {
+  margin-bottom: 0;
+  font-size: 1.125em;
+  border-top-color: #43484e;
+}
+
+.footer_general-inqueries .list__links .list_link {
+  color: #43484e;
+  border-color: #43484e;
+}
+
+.footer_general-inqueries .list__links .list_link:visited,
+.footer_general-inqueries .list__links .list_link.visited {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.footer_general-inqueries .list__links .list_link:hover,
+.footer_general-inqueries .list__links .list_link.hover {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.footer_general-inqueries .list__links .list_link:focus,
+.footer_general-inqueries .list__links .list_link.focus {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.footer_general-inqueries .list__links .list_link:active,
+.footer_general-inqueries .list__links .list_link.active {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.footer_list .list_link {
+  font-family: &quot;AvenirNextLTW01-Regular&quot;, Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  color: #101820;
+  border-color: #101820;
+  border-bottom-width: 0 !important;
+}
+
+.footer_list .list_link em,
+.footer_list .list_link i {
+  font-family: &quot;AvenirNextLTW01-Italic&quot;, Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+
+.lt-ie9 .footer_list .list_link em,
+.lt-ie9 .footer_list .list_link i {
+  font-style: normal !important;
+}
+
+.footer_list .list_link strong,
+.footer_list .list_link b {
+  font-family: &quot;AvenirNextLTW01-Demi&quot;, Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.lt-ie9 .footer_list .list_link strong,
+.lt-ie9 .footer_list .list_link b {
+  font-weight: normal !important;
+}
+
+.footer_list .list_link:visited,
+.footer_list .list_link.visited {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_list .list_link:hover,
+.footer_list .list_link.hover {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_list .list_link:focus,
+.footer_list .list_link.focus {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_list .list_link:active,
+.footer_list .list_link.active {
+  border-color: #101820;
+  color: #101820;
+}
+
+.footer_list .list_link:hover,
+.footer_list .list_link.hover,
+.footer_list .list_link:focus,
+.footer_list .list_link.focus {
+  border-bottom-width: 1px !important;
 }
 
 .footer-l {
