--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8915,6 +8915,41 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     margin-bottom: 0;
   }
 }
+.footer_nav-list {
+  font-size: 1.125em;
+}
+.footer_nav-list.list__links {
+  border-top-color: #101820;
+}
+.footer_nav-list .list_link {
+  color: #101820;
+  border-color: #101820;
+  border-bottom-width: 1px;
+}
+.footer_nav-list .list_link:visited,
+.footer_nav-list .list_link.visited {
+  border-color: #101820;
+  color: #101820;
+}
+.footer_nav-list .list_link:hover,
+.footer_nav-list .list_link.hover {
+  border-color: #101820;
+  color: #101820;
+}
+.footer_nav-list .list_link:focus,
+.footer_nav-list .list_link.focus {
+  border-color: #101820;
+  color: #101820;
+}
+.footer_nav-list .list_link:active,
+.footer_nav-list .list_link.active {
+  border-color: #101820;
+  color: #101820;
+}
+.footer_nav-list .list_link:hover,
+.footer_nav-list .list_link.hover {
+  border-bottom-width: 1px;
+}
 .footer_nav-list .list_link__disabled {
   color: #babbbd;
   border-color: #babbbd;
@@ -8944,6 +8979,139 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 .footer_nav-list .list_link__disabled:hover,
 .footer_nav-list .list_link__disabled.hover {
   border-bottom-width: 1px;
+}
+.footer_logo {
+  width: 218px;
+  height: 46px;
+  margin-bottom: 1em;
+}
+.footer_address {
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+}
+.footer_address em,
+.footer_address i {
+  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+.lt-ie9 .footer_address em,
+.lt-ie9 .footer_address i {
+  font-style: normal !important;
+}
+.footer_address strong,
+.footer_address b {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+.lt-ie9 .footer_address strong,
+.lt-ie9 .footer_address b {
+  font-weight: normal !important;
+}
+@media only all and (min-width: 37.5em) {
+  .footer_address {
+    font-size: 0.75em;
+  }
+}
+@media only all and (min-width: 37.5em) {
+  .footer_address-word-break {
+    display: block;
+  }
+}
+.footer_general-inqueries b {
+  display: block;
+  margin-bottom: 0.5em;
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+.lt-ie9 .footer_general-inqueries b {
+  font-weight: normal !important;
+}
+.footer_general-inqueries .list__links {
+  margin-bottom: 0;
+  font-size: 1.125em;
+  border-top-color: #43484e;
+}
+.footer_general-inqueries .list__links .list_link {
+  color: #43484e;
+  border-color: #43484e;
+}
+.footer_general-inqueries .list__links .list_link:visited,
+.footer_general-inqueries .list__links .list_link.visited {
+  border-color: #43484e;
+  color: #43484e;
+}
+.footer_general-inqueries .list__links .list_link:hover,
+.footer_general-inqueries .list__links .list_link.hover {
+  border-color: #43484e;
+  color: #43484e;
+}
+.footer_general-inqueries .list__links .list_link:focus,
+.footer_general-inqueries .list__links .list_link.focus {
+  border-color: #43484e;
+  color: #43484e;
+}
+.footer_general-inqueries .list__links .list_link:active,
+.footer_general-inqueries .list__links .list_link.active {
+  border-color: #43484e;
+  color: #43484e;
+}
+.footer_list .list_link {
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  color: #101820;
+  border-color: #101820;
+  border-bottom-width: 0 !important;
+}
+.footer_list .list_link em,
+.footer_list .list_link i {
+  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+.lt-ie9 .footer_list .list_link em,
+.lt-ie9 .footer_list .list_link i {
+  font-style: normal !important;
+}
+.footer_list .list_link strong,
+.footer_list .list_link b {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+.lt-ie9 .footer_list .list_link strong,
+.lt-ie9 .footer_list .list_link b {
+  font-weight: normal !important;
+}
+.footer_list .list_link:visited,
+.footer_list .list_link.visited {
+  border-color: #101820;
+  color: #101820;
+}
+.footer_list .list_link:hover,
+.footer_list .list_link.hover {
+  border-color: #101820;
+  color: #101820;
+}
+.footer_list .list_link:focus,
+.footer_list .list_link.focus {
+  border-color: #101820;
+  color: #101820;
+}
+.footer_list .list_link:active,
+.footer_list .list_link.active {
+  border-color: #101820;
+  color: #101820;
+}
+.footer_list .list_link:hover,
+.footer_list .list_link.hover,
+.footer_list .list_link:focus,
+.footer_list .list_link.focus {
+  border-bottom-width: 1px !important;
 }
 .footer-l {
   display: block;
