Mobile margins for footer.

--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -3444,8 +3444,7 @@ Main content...
 }
 .footer_logo {
   width: 218px;
-  height: 46px;
-  margin-bottom: 1em;
+  margin-bottom: 0.625em;
 }
 .footer_address {
   font-family: &quot;AvenirNextLTW01-Regular&quot;, Arial, sans-serif;
@@ -3521,6 +3520,9 @@ Main content...
   border-color: #43484e;
   color: #43484e;
 }
+.footer_list {
+  margin-bottom: 0;
+}
 .footer_list .list_link {
   font-family: &quot;AvenirNextLTW01-Regular&quot;, Arial, sans-serif;
   font-style: normal;
@@ -3583,6 +3585,7 @@ Main content...
 }
 .footer-pre {
   position: relative;
+  margin-bottom: 2.8125em;
 }
 @media only all and (min-width: 48em) {
   .footer-pre .footer_share-icon-list {
@@ -3607,6 +3610,9 @@ Main content...
     margin-right: 0.25em;
     margin-left: 0;
   }
+}
+.footer-left {
+  margin-bottom: 2.8125em;
 }
 @media only all and (min-width: 75em) {
   .footer-left {
