--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -3302,8 +3302,7 @@ Main content...
 
 .footer_logo {
   width: 218px;
-  height: 46px;
-  margin-bottom: 1em;
+  margin-bottom: 0.625em;
 }
 
 .footer_address {
@@ -3391,6 +3390,10 @@ Main content...
   color: #43484e;
 }
 
+.footer_list {
+  margin-bottom: 0;
+}
+
 .footer_list .list_link {
   font-family: &quot;AvenirNextLTW01-Regular&quot;, Arial, sans-serif;
   font-style: normal;
@@ -3464,6 +3467,7 @@ Main content...
 
 .footer-pre {
   position: relative;
+  margin-bottom: 2.8125em;
 }
 
 .footer-pre .footer_share-icon-list {
@@ -3490,6 +3494,10 @@ Main content...
 .footer-pre .footer_nav-list .list_item {
   margin-right: 0.25em;
   margin-left: 0;
+}
+
+.footer-left {
+  margin-bottom: 2.8125em;
 }
 
 .footer-left .footer_logo {
