--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -9725,8 +9725,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 
 .footer_logo {
   width: 218px;
-  height: 46px;
-  margin-bottom: 1em;
+  margin-bottom: 0.625em;
 }
 
 .footer_address {
@@ -9814,6 +9813,10 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   color: #43484e;
 }
 
+.footer_list {
+  margin-bottom: 0;
+}
+
 .footer_list .list_link {
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
@@ -9887,6 +9890,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 
 .footer-pre {
   position: relative;
+  margin-bottom: 2.8125em;
 }
 
 .footer-pre .footer_share-icon-list {
@@ -9913,6 +9917,10 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 .footer-pre .footer_nav-list .list_item {
   margin-right: 0.25em;
   margin-left: 0;
+}
+
+.footer-left {
+  margin-bottom: 2.8125em;
 }
 
 .footer-left .footer_logo {
