--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -1790,8 +1790,7 @@
 
     &_logo {
         width: 218px;
-        height: 46px;
-        margin-bottom: unit(16px / @base-font-size-px, em);
+        margin-bottom: unit(10px / @base-font-size-px, em);
     }
 
     &_address {
@@ -1823,6 +1822,7 @@
     }
 
     &_list {
+        margin-bottom: 0;
         .list_link {
             .webfont-regular();
             .u-link__colors(@black);
@@ -1836,6 +1836,7 @@
 
     &-pre {
         position: relative;
+        margin-bottom: unit(45px / @base-font-size-px, em);
 
         & .footer_share-icon-list {
             .respond-to-min(768px, {
@@ -1853,6 +1854,8 @@
     }
 
     &-left {
+        margin-bottom: unit(45px / @base-font-size-px, em);
+
         .respond-to-min(1200px, {
             .grid_column(4);
             .grid_pull(8);
@@ -1890,11 +1893,13 @@
 
     &-right {
         .u-hide-on-mobile();
+
         .respond-to-min(1200px, {
             .grid_column(8);
             .grid_push(4);
             border-right: 0;
         });
+
         & .footer-l_col {
             .grid_column(3);
         }
