--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8902,7 +8902,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     - cfgov-layout
 */
 .footer {
-  padding-top: 2.8125em;
+  padding-top: 3.125em;
   padding-bottom: 2.8125em;
   border-top: 3px solid #2cb34a;
   background: #f1f2f2;
@@ -8915,16 +8915,13 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
     margin-bottom: 0;
   }
 }
-.footer_nav-list {
-  font-size: 1.125em;
-}
 .footer_nav-list.list__links {
   border-top-color: #101820;
 }
 .footer_nav-list .list_link {
+  font-size: 1.125em;
   color: #101820;
   border-color: #101820;
-  border-bottom-width: 1px;
 }
 .footer_nav-list .list_link:visited,
 .footer_nav-list .list_link.visited {
@@ -8946,39 +8943,71 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
   border-color: #101820;
   color: #101820;
 }
-.footer_nav-list .list_link:hover,
-.footer_nav-list .list_link.hover {
-  border-bottom-width: 1px;
+@media only all and (min-width: 48em) {
+  .footer_nav-list .list_link {
+    margin-right: 1.36363636em;
+    font-size: 1.375em;
+    font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    border-bottom-width: 0 !important;
+  }
+  .footer_nav-list .list_link em,
+  .footer_nav-list .list_link i {
+    font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+    font-style: italic;
+    font-weight: normal;
+  }
+  .lt-ie9 .footer_nav-list .list_link em,
+  .lt-ie9 .footer_nav-list .list_link i {
+    font-style: normal !important;
+  }
+  .footer_nav-list .list_link strong,
+  .footer_nav-list .list_link b {
+    font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+  }
+  .lt-ie9 .footer_nav-list .list_link strong,
+  .lt-ie9 .footer_nav-list .list_link b {
+    font-weight: normal !important;
+  }
+  .footer_nav-list .list_link:hover,
+  .footer_nav-list .list_link.hover,
+  .footer_nav-list .list_link:focus,
+  .footer_nav-list .list_link.focus {
+    border-bottom-width: 1px !important;
+  }
 }
-.footer_nav-list .list_link__disabled {
+.footer_nav-list .list_link.list_link__disabled {
   color: #babbbd;
   border-color: #babbbd;
-  border-bottom-width: 1px;
-  border-bottom-style: dotted;
+  border-bottom: 1px dotted;
 }
-.footer_nav-list .list_link__disabled:visited,
-.footer_nav-list .list_link__disabled.visited {
+.footer_nav-list .list_link.list_link__disabled:visited,
+.footer_nav-list .list_link.list_link__disabled.visited {
   border-color: #babbbd;
   color: #babbbd;
 }
-.footer_nav-list .list_link__disabled:hover,
-.footer_nav-list .list_link__disabled.hover {
+.footer_nav-list .list_link.list_link__disabled:hover,
+.footer_nav-list .list_link.list_link__disabled.hover {
   border-color: #babbbd;
   color: #babbbd;
 }
-.footer_nav-list .list_link__disabled:focus,
-.footer_nav-list .list_link__disabled.focus {
+.footer_nav-list .list_link.list_link__disabled:focus,
+.footer_nav-list .list_link.list_link__disabled.focus {
   border-color: #babbbd;
   color: #babbbd;
 }
-.footer_nav-list .list_link__disabled:active,
-.footer_nav-list .list_link__disabled.active {
+.footer_nav-list .list_link.list_link__disabled:active,
+.footer_nav-list .list_link.list_link__disabled.active {
   border-color: #babbbd;
   color: #babbbd;
 }
-.footer_nav-list .list_link__disabled:hover,
-.footer_nav-list .list_link__disabled.hover {
-  border-bottom-width: 1px;
+@media only all and (min-width: 48em) {
+  .footer_nav-list .list_link.list_link__disabled {
+    border-bottom-width: 0 !important;
+  }
 }
 .footer_logo {
   width: 218px;
@@ -9128,6 +9157,7 @@ input.expandable_target__btn__secondary::-moz-focus-inner {
 @media only all and (min-width: 48em) {
   .footer-pre .footer_share-icon-list {
     position: absolute;
+    top: -9px;
     right: 0;
   }
 }
